--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,6 +22,8 @@
   "plugins": ["react", "@typescript-eslint"],
   "rules": {
     "jsx-a11y/no-static-element-interactions": 0,
+    "no-return-assign": 0,
+    "no-param-reassign": 0,
     "jsx-a11y/click-events-have-key-events": 0,
     "@typescript-eslint/consistent-type-imports": ["error", { "prefer": "type-imports" }],
     "@typescript-eslint/explicit-function-return-type": [
